<resources>
    <string name="app_name">Bicicleta</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="bluetooth">Buscar dispositivos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="load_gpx_data_button_label">Load GPX mock data</string>
    <string name="snap_to_roads_button_label">Send snap to roads request</string>
    <string name="request_speeds_button_label">Request speed limits</string>
    <string name="modo">Modo: </string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->


    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>


    <!-- Facebook -->
    <string name="facebook_app_id">fb199929567157039</string>


    <string name="none_paired">Ningun dispositivo pudo ser emparejado</string>
    <string name="hint_email">hint_email</string>
    <string name="cancelface">Se cancelo la operacion</string>
    <string name="errorface">Error al inicia sesion</string>
    <string name="not_revoke">No revocar</string>
    <string name="title_activity_directions">Map</string>


    <!-- Maps Direction -->
    <string name="Origen">Introduce direccion de origen</string>
    <string name="Destino">Introduce direccion destino</string>
    <string name="ruta">Encontrar ruta</string>
    <string name="km">0 km</string>
    <string name="min">0 min</string>

</resources>
